# boardviz

./: .gitignore  CLAUDE.md  README.md  SPEC.md  TRACEABILITY.md  pyproject.toml
.github/workflows/: release.yml
.streamlit/: config.toml
scripts/: release.py
src/boardviz/: __init__.py  analysis_batch.py  app.py  blitz_analysis.py  bootstrap.py  cct.py  cli.py  config.py  db.py  engine.py  fetch.py  grading.py  ingest.py  lichess.py  mate.py  patterns.py  trainer.py
src/boardviz/ui/: board.py  common.py  import_page.py  mate_page.py  review_page.py  trainer_page.py
src/chesstrain/: __init__.py  analysis_batch.py  app.py  blitz_analysis.py  cct.py  cli.py  config.py  db.py  engine.py  fetch.py  grading.py  patterns.py  trainer.py
src/chesstrain/ui/: board.py  common.py  dashboard.py  import_page.py  inspector_page.py  mate_page.py  review_page.py  scout_page.py  trainer_page.py
test/: conftest.py  test_analysis.py  test_bootstrap.py  test_cct.py  test_db.py  test_fetch.py  test_grading.py  test_hosted.py  test_lichess.py  test_mate.py  test_patterns.py  test_rebuild.py  test_spec_traceability.py  test_trainer.py  test_ui_smoke.py
test/fixtures/: golden_games.json
